samples/_failures_safe/1761151713_c7ce6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21c8253a.c: In function ‘main’:
./samples/SAFE/__tmp_21c8253a.c:151: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_21c8253a.c:150:5: error: expected declaration or statement at end of input
  150 |     if
      |     ^~
